--- a/src/assets/scss/main.scss
+++ b/src/assets/scss/main.scss
@@ -23,13 +23,12 @@
 
 @mixin inner {
 	> .inner {
-		@include padding(4em, 0);
+		padding: 2rem;
 		margin: 0 auto;
 		max-width: _size(inner);
 		width: calc(100% - 6em);
 
 		@include breakpoint(small) {
-			@include padding(3em, 0);
 			width: calc(100% - 3em);
 		}
 	}
